<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNote">

    <EditText
        android:id="@+id/edt_note_title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_label"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@id/edt_note_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_note_description"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_description_label"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@id/button_create_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_create_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_note_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_note_description" />

    <TextView
        android:id="@+id/tv_title_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_title_label"
        app:layout_constraintStart_toStartOf="@+id/edt_note_title"
        app:layout_constraintTop_toBottomOf="@+id/edt_note_title"
        android:textColor="@color/red"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_description_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_description_label"
        app:layout_constraintStart_toStartOf="@+id/edt_note_description"
        app:layout_constraintTop_toBottomOf="@+id/edt_note_description"
        android:textColor="@color/red"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>